objects/vlocity_ins__InsuranceClaimPartyRelationship__c.object
<CustomObject>
    <description>Maintain relationship between an involved party and an insurance claim. Master-detail child object of Claim and Party.</description>
    <fields>
        <fullName>vlocity_ins__ClaimId__c</fullName>
        <label>Claim</label>
        <referenceTo>vlocity_ins__InsuranceClaim__c</referenceTo>
        <relationshipName>Claim_Party_Relationships1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__HasInjuries__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Injuries</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__HasProperties__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Properties</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PartyId__c</fullName>
        <label>Party</label>
        <referenceTo>vlocity_ins__Party__c</referenceTo>
        <relationshipLabel>Claim Relationships</relationshipLabel>
        <relationshipName>ClaimPartyRelationships1</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PartyRelationshipType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>vlocity_ins__PartyRelationshipType__c.vlocity_ins__SourcePartyType__c</field>
                <operation>equals</operation>
                <value>Claim</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>vlocity_ins__PartyRelationshipType__c</referenceTo>
        <relationshipLabel>Claim Relationships</relationshipLabel>
        <relationshipName>ClaimRelationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Party__c</fullName>
        <formula>IF( ISBLANK(vlocity_ins__PartyId__r.vlocity_ins__AccountId__r.Id), HYPERLINK(&quot;/&quot; &amp; vlocity_ins__PartyId__r.vlocity_ins__ContactId__r.Id, vlocity_ins__PartyId__r.Name , &quot;_parent&quot;), HYPERLINK(&quot;/&quot; &amp; vlocity_ins__PartyId__r.vlocity_ins__AccountId__r.Id, vlocity_ins__PartyId__r.Name , &quot;_parent&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Party</label>
        <type>Text</type>
    </fields>
    <label>Claim Relationship</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Claim Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>